Update for "Zones not copied defect"

--- a/RoutePlanner_DeveloperTools/Source/ArcLogistics/ArcLogistics.csproj
+++ b/RoutePlanner_DeveloperTools/Source/ArcLogistics/ArcLogistics.csproj
@@ -909,6 +909,9 @@
     <EmbeddedResource Include="Resources\aldb_update_renewal_locations.sql" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resources\aldb_update_route_locations.sql" />
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Resources\aldb_upgrade_1_1.sql" />
   </ItemGroup>
   <ItemGroup>
