Upgraded to .NET 4.6.2 Added explicit use of TLS1.2 Made ActiveReports not version-specific

--- a/RoutePlanner_DeveloperTools/Source/ArcLogisticsApp/app.config
+++ b/RoutePlanner_DeveloperTools/Source/ArcLogisticsApp/app.config
@@ -8,7 +8,7 @@
 			<section name="ESRI.ArcLogistics.App.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		</sectionGroup>
 	</configSections>
-	<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+	<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup>
 	<runtime>
 		<generatePublisherEvidence enabled="false"/>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -34,7 +34,7 @@
     <value>GettingStarted</value>
    </setting>
    <setting name="LastProjectName" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="IsFirstTimeRun" serializeAs="String">
     <value>True</value>
@@ -43,13 +43,13 @@
     <value>False</value>
    </setting>
    <setting name="MapDisplayConfig" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="FindOrdersLastKeyword" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="FindOrdersSearchCriteria" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="StartApplicationAtLastSavedPage" serializeAs="String">
     <value>True</value>
@@ -58,7 +58,7 @@
     <value>True</value>
    </setting>
    <setting name="LastSavedDate" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="IsRoutingConstraintCheckEnabled" serializeAs="String">
     <value>True</value>
@@ -70,31 +70,31 @@
     <value>True</value>
    </setting>
    <setting name="GlobalAccountUsername" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="GlobalAccountPassword" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="UsersProjectsFolder" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="UsersPlugInsFolder" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="ActionPanelSettings" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="ProxyServerUsername" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="ProxyServerPassword" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="CustomColorsSet" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="LicenseCache" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="LicenseExpirationWarningWasShown" serializeAs="String">
     <value>False</value>
@@ -133,7 +133,7 @@
     <value>False</value>
    </setting>
    <setting name="ProxySettings" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="WarnUserIfVirtualLocationDetected" serializeAs="String">
     <value>True</value>
@@ -144,15 +144,13 @@
    <setting name="LastUsedBarrierSpeedFactor" serializeAs="String">
     <value>30</value>
    </setting>
-   <setting name="IsAlwaysAskAboutApplyingBreaksToDefaultRoutes"
-    serializeAs="String">
+   <setting name="IsAlwaysAskAboutApplyingBreaksToDefaultRoutes" serializeAs="String">
     <value>True</value>
    </setting>
    <setting name="ApplyBreaksChangesToDefaultRoutes" serializeAs="String">
     <value>False</value>
    </setting>
-   <setting name="IsAlwaysAskAboutApplyingDefaultRoutesToSheduledRoutes"
-    serializeAs="String">
+   <setting name="IsAlwaysAskAboutApplyingDefaultRoutesToSheduledRoutes" serializeAs="String">
     <value>True</value>
    </setting>
    <setting name="ApplyDefaultRoutesToSheduledRoutes" serializeAs="String">
